<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sine Dolore</string>

    <!-- MAps -->
    <string name="redasistencial">Red Asistencial</string>

    <!-- PDF -->
    <string name="error_pdf">No hay aplicación lectora de PDFs. Toca aquí para ir a la Play Store para descargar un lector gratuito </string>

    <!-- about -->
    <string name="about1">Aplicación desarrollada por Global Umbrella</string>
    <string name="about2">El icono del sobre nos permite registrarnos en el boletín de noticias de Sine Dolore</string>
    <string name="about3">El mapa nos permite ver la Red Asistencial Sine Dolore</string>
    <string name="about4">Pain Meeting nos da acceso al itinerario de la gala Sine Dolore y el congreso</string>
    <string name="about5">Con el icono del mundo accedemos a la página web de Sine Dolore</string>
    <string name="about6">Con el icono de YouTube tenemos acceso al canal de YouTube</string>
    <string name="about7">Accedemos a la tienda para comprar el vino Sine Dolore</string>

    <!-- KEYS -->
    <string name="Gonzalo">AIzaSyDIN2MUMzYWaIro_qyx7Rm48XL194Illzk</string>
    <string name="Aitor">AIzaSyA9hBA72SEJqTIULdKn1CZXK8hMxcvnt0Y</string>
    <string name="Publica">AIzaSyDQBwMFk4MfCxvHV3Gw9iLxF14SrfBvCDo</string>

    <!-- Inicial -->
    <string name="Dimension">100dp</string>
    <string name="Tamano">10dp</string>
    <string name="Form">Registro</string>
    <string name="Maps">Mapa Sine Dolore</string>
    <string name="Pdf">Pain Meeting y gala Sine Dolore</string>
    <string name="Vino">Tienda Sine Dolore</string>
    <string name="Web">Web Sine Dolore</string>
    <string name="Video">Canal de YouTube</string>
    <string name="Acercade">Acerca de</string>
    <string name="bt_about">Acerca de</string>

    <!-- Forms -->
    <string name="Enviar">Enviar datos</string>
    <string name="formtoastError">Faltan campos por rellenar</string>
    <string name="formtoastOk">Gracias por registrarte en Sine Dolore</string>
    <string name="formtoastEmail">El formato del e-mail no es correcto</string>
    <string name="comprobarnombre">El nombre no ha sido introducido</string>
    <string name="comprobarapellido">El apellido no ha sido introducido</string>
    <string name="comprobaremail">El e-mail no ha sido introducido</string>
    <string name="comprobartelefono">El teléfono no ha sido introducido</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="email">E-mail:</string>
    <string name="telefono">Teléfono:</string>

</resources>