<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sine.apps.sinedolore.Inicial"
    tools:ignore="MergeRootFrame" 
    android:background="#FFFFFF">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/lletres" />

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/btform"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/form"
                    android:gravity="bottom|center"
                    android:text="@string/Form"
                    android:textSize="10dp" />

                <Button
                    android:id="@+id/btgmaps"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/maps"
                    android:gravity="bottom|center"
                    android:text="@string/Maps"
                    android:textSize="10dp" />
            </LinearLayout>

          <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/btpdf"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/pdfs"
                    android:gravity="bottom|center"
                    android:text="@string/Pdf"
                    android:textSize="10dp" />

                <Button
                    android:id="@+id/btpage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/pagi"
                    android:gravity="bottom|center"
                    android:text="@string/Web"
                    android:textSize="10dp" />
            </LinearLayout>

           <LinearLayout
                android:id="@+id/LinearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/btyt"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/yout"
                    android:gravity="bottom|center"
                    android:text="@string/Video"
                    android:textSize="10dp" />

                <Button
                    android:id="@+id/btwine"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/wine"
                    android:gravity="bottom|center"
                    android:text="@string/Vino"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/btabout"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/sobre"
                    android:gravity="bottom|right"
                    android:text="@string/Acercade"
                    android:textSize="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>